--- a/index.html
+++ b/index.html
@@ -1,37 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind Configs -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'green' : 'hsl(75, 94%, 57%)',
+            'white' : 'hsl(0, 0%, 100%)',
+            'grey'  : 'hsl(0, 0%, 20%)',
+            'dark-grey': 'hsl(0, 0%, 12%)',
+            'off-black': 'hsl(0, 0%, 8%)'
+          },
+          screens : {
+            mobile : '375px',
+            desktop: '1440px'
+          }
+        }
+      }
+    }
+  </script>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <title>Frontend Mentor | Social links profile</title>
 </head>
-<body>
-  <header>
-    <section class="pic">
-      <img src="avatar-jessica.jpeg" alt="profile picture">
-    </section>
-    <h2>Jessica Randall</h2>
-    <p class="location">London, United Kingdom</p>
-    <p>"Front-end developer and avid reader."</p>
-  </header>
-  <main>
-    <div id="container">
-      <div class="content">GitHub</div>
-      <div class="content">Frontend Mentor</div>
-      <div class="content">LinkedIn</div>
-      <div class="content">Twitter</div>
-      <div class="content">Instagram</div>
+<body class="text-[14px] bg-off-black text-white">
+<main class="container m-auto pt-28">
+  <div class="bg-dark-grey p-8 m-8 text-center flex flex-col items-center justify-center">
+    <div class="space-y-2 flex flex-col items-center gap-2">
+      <img src="avatar-jessica.jpeg" alt="profile picture" class="rounded-full">
+      <h2>Jessica Randall</h2>
+      <p class="location">London, United Kingdom</p>
+      <p>"Front-end developer and avid reader."</p>
+    </div>
+    <div id="container" class="space-y-2 flex flex-col items-center gap-2">
+      <button class="content">GitHub</button>
+      <button class="content">Frontend Mentor</button>
+      <button class="content">LinkedIn</button>
+      <button class="content">Twitter</button>
+      <button class="content">Instagram</button>
+    </div>
     </div>
   </main>
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Austine Odanga</a>.
-    </div>
-  </footer>
-  
 </body>
 </html>
