style: styled page

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body class="text-[14px] bg-off-black text-white">
-<main class="container m-auto pt-28">
-  <div class="bg-dark-grey p-8 m-8 text-center flex flex-col items-center justify-center">
+<main class="container flex m-auto pt-24 items-center justify-center">
+  <div class="bg-dark-grey p-8 m-8 text-center flex flex-col items-center justify-center gap-3 rounded">
     <div class="space-y-2 flex flex-col items-center gap-2">
       <img src="avatar-jessica.jpeg" alt="profile picture" class="rounded-full">
-      <h2>Jessica Randall</h2>
-      <p class="location">London, United Kingdom</p>
-      <p>"Front-end developer and avid reader."</p>
+      <h2 class="text-2xl font-semibold">Jessica Randall</h2>
+      <p class="text-xs">London, United Kingdom</p>
+      <p class="text-green">"Front-end developer and avid reader."</p>
     </div>
-    <div id="container" class="space-y-2 flex flex-col items-center gap-2">
-      <button class="content">GitHub</button>
-      <button class="content">Frontend Mentor</button>
-      <button class="content">LinkedIn</button>
-      <button class="content">Twitter</button>
-      <button class="content">Instagram</button>
+    <div id="container" class="space-y-2 flex flex-col items-center gap-2 font-semibold">
+      <button class="p-3 w-[250px] bg-grey rounded cursor-pointer hover:bg-green hover:text-off-black">GitHub</button>
+      <button class="p-3 w-[250px] bg-grey rounded cursor-pointer hover:bg-green hover:text-off-black">Frontend Mentor</button>
+      <button class="p-3 w-[250px] bg-grey rounded cursor-pointer hover:bg-green hover:text-off-black">LinkedIn</button>
+      <button class="p-3 w-[250px] bg-grey rounded cursor-pointer hover:bg-green hover:text-off-black">Twitter</button>
+      <button class="p-3 w-[250px] bg-grey rounded cursor-pointer hover:bg-green hover:text-off-black">Instagram</button>
     </div>
     </div>
   </main>
